<resources>
    <string name="app_name">MyCPD</string>
    <string name="titlePlaceholder">Title</string>
    <string name="goalTitle">Goals</string>
    <string name="date">12/10/2023</string>
    <string name="startDateTitle">Start:</string>
    <string name="endDateTitle">End:</string>
    <string name="btnAddNew">ADD NEW</string>





    <string-array name="categories">
        <item>Personal</item>
        <item>Professional</item>
        <item>Academic</item>
    </string-array>

    <string-array name="timeFrame">
        <item>Short Term</item>
        <item>Medium Term</item>
        <item>Long Term</item>
    </string-array>


</resources>