<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMainActivity"

        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/primaryColor"

        style="@style/textActionbarTitle"
        app:titleTextAppearance="@style/textActionbarTitle"
        app:title="@string/app_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textBoldLargeTitles"
        android:text="@string/goalTitle"

        android:gravity="center"
        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMainActivity"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGoalView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="10dp"

        app:layout_constraintBottom_toTopOf="@id/btnAddGoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tvMainTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAddGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/btnAddNew"
        style="@style/btnStyle"
        android:background="@drawable/button_add"
        android:textColor="@drawable/button_add"
        android:layout_margin="10dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvGoalView"
        />


</androidx.constraintlayout.widget.ConstraintLayout>


