<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="9dp"
    android:layout_marginEnd="9dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:padding="20dp"
    android:background="@drawable/board_view_white_background"
    >

    <ImageView
        android:id="@+id/ivStatusCircle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/goal_status_circle"



        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvGoalTitle"
        style="@style/textBoldSmallTitles"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"


        android:text="@string/title"

        app:layout_constraintEnd_toStartOf="@id/cbCompleted"
        app:layout_constraintStart_toEndOf="@id/ivStatusCircle"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/cbCompleted"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/check_box_boarders"
        android:layout_marginEnd="10dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tvStartDateTitle"

        style="@style/textBoldSmallTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="3dp"

        android:text="@string/startDateTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStatusCircle"
        />

    <TextView
        android:id="@+id/tvStartDate"

        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:paddingStart="1dp"



        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvStartDateTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvGoalTitle"
        />

    <TextView
        android:id="@+id/tvEndDateTitle"

        style="@style/textBoldSmallTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:layout_marginStart="25dp"

        android:text="@string/endDateTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvStartDate"
        app:layout_constraintTop_toBottomOf="@+id/tvGoalTitle"
        />

    <TextView
        android:id="@+id/tvEndDate"

        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:paddingStart="1dp"

        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvEndDateTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvGoalTitle"
        />




</androidx.constraintlayout.widget.ConstraintLayout>